--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -44,21 +44,21 @@
 	-->
 	
 	<!-- LiveRe City install code -->
-<div id="lv-container" data-id="city" data-uid="Mi8xLzM=">
-<script type="text/javascript">
+<div id="lv-container" data-id="city" data-uid="MTAyMC80NjkxNS8yMzQxNg==">
+	<script type="text/javascript">
    (function(d, s) {
-	   var j, e = d.getElementsByTagName(s)[0];
+       var j, e = d.getElementsByTagName(s)[0];
 
-	   if (typeof LivereTower === 'function') { return; }
+       if (typeof LivereTower === 'function') { return; }
 
-	   j = d.createElement(s);
-	   j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-	   j.async = true;
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
 
-	   e.parentNode.insertBefore(j, e);
+       e.parentNode.insertBefore(j, e);
    })(document, 'script');
-</script>
-<noscript>Please activate JavaScript for write a comment in LiveRe</noscript>
+	</script>
+<noscript> Please activate JavaScript for write a comment in LiveRe</noscript>
 </div>
 	<!-- completed City install code -->
 	
